--- a/Module 1 Project Index.ipynb
+++ b/Module 1 Project Index.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Instructor name: James Irving\n",
     "\n",
-    "Blog post URL: https://learn.co/blog/blog_posts/41667"
+    "Blog post URL: https://rachelbeery.github.io/mod_1_project"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fill the missing runtime values with the median to preserve the distriibution of runtimes \n",
+    "#Fill the missing runtime values with the median to preserve the distribution of runtimes \n",
     "imdb_title_basics[\"runtime_minutes\"] = imdb_title_basics[\"runtime_minutes\"].fillna(imdb_title_basics[\"runtime_minutes\"].median())"
    ]
   },
